<resources>
    <string name="app_name" translatable="false">\@LGS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="no_account_yet">Don\'t have an account yet? Click Here!</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="err_not_implemented">Not Implemented Yet.</string>
    <string name="error">Error</string>
    <string name="err_something_wrong">Something went wrong.</string>
    <string name="err_password_wrong">The given password was incorrect.</string>
    <string name="err_user_email_not_exist">User with the given email doesn\'t exist.</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_mismatch">Passwords didn\'t match.</string>
    <string name="err_wrong_create_user">Something went wrong while creating user.</string>
    <string name="err_wrong_password_hash">Something went wrong while hashing the password.</string>
    <string name="err_email_exists">User with the given email already exists, please try a different email.</string>
    <string name="def_pref" translatable="false">DefaultPreferences</string>
    <string name="login_token" translatable="false">Login Token</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="err_req_first_name">First Name is required.</string>
    <string name="err_req_last_name">Last Name is required.</string>
    <string name="err_req_email">Email is required.</string>
    <string name="err_req_password">Password is required.</string>
    <string name="err_min_8_char">Password needs to be at least 8 characters.</string>
    <string name="err_password_contain">A password needs to contain at least 1 uppercase letter, 1 lowercase letter, 1 digit, and 1 symbol.</string>
    <string name="err_invalid_email">Email is invalid.</string>
    <string name="presence">Presences</string>
    <string name="events">Events</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="page_nr" translatable="false">pageNr</string>
    <string name="page_title" translatable="false">pageTitle</string>
    <string name="sign_out">Sign out</string>
    <string name="lgss">LGSs</string>
    <string name="lgs">LGS</string>
    <string name="name">Name</string>
    <string name="add_lgs">Add LGS</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="err_lgs_id_exist">LGS with the given id doesn\'t exist.</string>
    <string name="deletingFront">Deleting</string>
    <string name="deletingBack"/>
    <string name="deletingFront2">"Are you sure you want to delete "</string>
    <string name="deletingBack2">\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_logo">App Logo</string>
    <string name="cd_ic_presence">Icon for Presences</string>
    <string name="cd_ic_events">Icon for Events</string>
    <string name="cd_ic_users">Icon for users</string>
    <string name="cd_ic_lgs">Icon for local game stores</string>
    <string name="settings">Settings</string>
    <string name="err_user_id_exist">User with the given id doesn\'t exist.</string>
    <string name="user_action">"What do you want to do with this "</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="delete">Delete</string>
    <string name="user_lowercase">user</string>
    <string name="assign_lgs">Assign LGS</string>
    <string name="err_couldnt_assign">Couldn\'t Assign LGS</string>
    <string name="msg_owns_lgs">This user already owns an LGS</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="assign_success">Successfully assigned LGS to User</string>
</resources>
