<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_above="@id/fragmentSelectionBar"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/fragmentSelectionBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="60"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/fragmentButton1"
            android:tag="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/primaryColor"
            android:onClick="menuItemClick">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_calendar_check_white_36dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/presence"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragmentButton2"
            android:tag="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/primaryDarkColor"
            android:onClick="menuItemClick">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_calendar_white_36dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/events"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragmentButton3"
            android:tag="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/primaryDarkColor"
            android:onClick="menuItemClick">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_account_white_36dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/users"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragmentButton4"
            android:tag="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/primaryDarkColor"
            android:onClick="menuItemClick">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_store_white_36dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/lgss"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
